
- version.pt: moved file type, python version and size info from their own
  columns into the file column.

- version.pt: moved history column from before the tox results column to behind
  the tox results.

- version.pt: removed "last modified" from history column

- version.pt: removed timestamp from "replaced" action in history column

- version.pt: add link to PyPI page if applicable.

- fix project page view if there are downloads with filenames which can't be
  parsed as packages with version number


2.2.0
---------------

- require devpi-server >= 2.1.0

- static resources now have a plus in front to avoid clashes with usernames and
  be consistent with how other urls work: "+static/..." and "+theme-static/..."

- adjusted font-sizes and cut-off width of content.

- only show underline on links when hovering.

- make the "description hasn't been rendered" warning stand out.

- version.pt: moved md5 sum from it's own column to the file column below the
  download link

- version.pt: added "history" column showing last modified time and infos
  about uploads and pushes.

- fix issue153: friendly error messages on upstream errors.

- index.pt: show permissions on index page


2.1.1
---------------

- better exception handling/reporting while indexing.

- renamed ``--index-projects`` to ``--recreate-search-index``.


2.1.0
---------------

- allow overwriting of templates for theming.

- show version info for currently active packages/plugins.

- fix encoding issue when loading long description with Python 3.4 on Windows.

- requires devpi-server 2.0.6.


2.0.1
---------------

- fix issue125: javascript for embedded doc view didn't work correctly.

- fix issue118: rendering of description with unicode.


2.0.0
---------------

- initial release

- fix issue112 (reported on devpi-server): introduce a URL for showing
  docs using ``latest`` instead of a version.  This will dynamically
  resolve to the latest version.